--- a/styles/global.css
+++ b/styles/global.css
@@ -1,38 +1,22 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+html {
+  font-size: 11px;
+  -webkit-text-size-adjust: none;
+  font-family: -apple-system, BlinkMacSystemFont, helvetica, Apple SD Gothic Neo, sans-serif;
+  font-display: fallback;
 
-* {
-  box-sizing: border-box;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-h1,
-h2,
-p,
-ul {
-  margin: 0;
-}
-
-ul {
-  padding: 0;
-  list-style: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 button {
-  padding: 0.5rem 1rem;
-  font-weight: bold;
+  background: none;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+}
+
+button.disabled {
+  cursor: default;
+  fill: #f2f3f4;
 }
